--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,11 +7,23 @@ h1
 {color: rgb(0, 0, 0);
     font-family: 'Arial, Helvetica, sans-serif'
 }
-h3, h4
+    h3, h4
 {
     color:darkslateblue;
 }
-h2 
+    h2 
 {
     color:lightslategrey;
+}
+    body
+{
+        background-image: linear-gradient(90deg,orange,blue);
+}
+    header
+{
+    background-color:pink; /*esta propriedade altera a cor de fundo do elemento selecionado*/
+    color: black;
+    margin: 0px 0px; /*margem de fora*/
+    padding: 20px; /*margem de fora*/
+
 }
